2003-10-11  Eric Blake  <ebb9@byu.net>

	* src/bytecode.cpp (EmitBinaryExpression): Evaluate left branch of
	otherwise unused && and || - bug 3488.

2003-10-06  Eric Blake  <ebb9@byu.net>

	* src/ast.h (AstWhileStatement, AstDoStatement, AstForStatement):
	Change loop bodies to always be blocks (resolves bug 3587).
	* src/ast.cpp: Use updates.
	* src/body.cpp (ProcessWhileStatement, ProcessDoStatement),
	(ProcessForStatement, ProcessContinueStatement): Ditto.
	(ProcessTryStatement): Undo old hack for try statements fixed by
	this update.
	* src/bytecode.cpp (EmitStatement): Use updates.
	* src/bytecode.h (Label::~Label): Add, to prevent regressions.
	* src/definite.cpp: Use updates.
	* src/java.g (MakeBlock): New function, use to implement AST
	updates.
	* src/javaact.cpp: Regenerate.
	* src/javaact.h: Ditto.
	* src/parser.h: Use updates.

2003-10-03  Eric Blake  <ebb9@byu.net>

	* src/body.cpp: Formatting.
	* src/decl.cpp: Ditto.
	* src/error.cpp: Ditto.
	* src/symbol.cpp: Ditto.
	* src/symbol.h: Ditto.

2003-10-01  Eric Blake  <ebb9@email.byu.edu>

	* src/symbol.h (MethodSymbol::file_location),
	(VariableSymbol::file_location): Initialize to NULL - fix
	regressions in patch on June 29.

2003-09-27  Eric Blake  <ebb9@email.byu.edu>

	* src/case.h (IsAsciiAlpha, StringEqual): Removed compiler
	warnings.
	* src/op.cpp (OpDesc): Ditto.

2003-09-27  Eric Blake  <ebb9@email.byu.edu>

	* src/m4/ac_cxx_type_equivalence.m4: New file, needed for at least
	gcc 3.3	on cygwin.
	* Makefile.am: Add dependence on ac_cxx_type_equivalence.m4.
	* acinclude.m4: Ditto.
	* configure.ac: Require automake 1.7.6, and rename from
	configure.in as recommended by automake.
	* Makefile.in: Regenerate.
	* aclocal.m4: Ditto.
	* config.guess: Ditto.
	* config.sub: Ditto.
	* configure: Ditto.
	* depcomp: Ditto.
	* install-sh: Ditto.
	* doc/Makefile.in: Ditto.
	* src/Makefile.in: Ditto.
	* src/config.h.in: Ditto.
	* src/platform.h: Add TYPE_I4_IS_INT to clean up type warnings.