@@ -1,3 +1,8 @@
+2003-10-13  Eric Blake  <ebb9@byu.net>
+
+	* src/bytecode.cpp (EmitBinaryExpression): Avoid dead code caused
+	in previous version of patch.
+
 2003-10-11  Eric Blake  <ebb9@byu.net>
 
 	* src/bytecode.cpp (EmitBinaryExpression): Evaluate left branch of
